* Form Preview: replace HTML entity in Spanish translation
* Queues: complete rewrite, fixes potential SQL injections, makes use of 
  elastix2.lib.php functions, fix title display under elastixneo theme.
* Agent Console: disconnect from databases when performing long polling since
  open database connections are no longer used while waiting.
* Dialer (ECCP): explicitly disconnect from DB connection to asterisk database,
  and report additional information in case of failure.
* Dialer (ECCP): add check for failure to list extensions in loginagent request
* CallCenter Configuration, Campaigns Out, Do not Call List, Agent Console, 
  Clients, Campaign In, Agents, ECCP Users, Break Administrator, Form Designer,
  Form Preview: fix title display under elastixneo theme
* CallCenter Configuration, Campaigns Out: Do not Call List, Clients, Campaign In, 
  Agents, ECCP Users, Break Administrator:
  import elastix2.lib.php instead of defining functions _tr and load_language_module
* Do not Call List, Form Designer, Form Preview: convert module to use of _tr
* Agent Console: add new function to check whether framework contains support
  for display of module title.

1.6.1 (SVN revision 3102)
* Agent Console: perform translation of legacy contact labels for incoming 
  calls into user-friendly values subject to i18n. Fixes Elastix bug #1039. 
* Dialer (ECCP): extend "getcampaignlist" request to add extra filtering options
* Dialer (ECCP): fix behavior when an incoming call is put on hold, and then is
  hung up by the remote side.
* Agent Console: specify explicit font size in CSS to prevent font size from
  varying with the selected theme. Helps fix Elastix bug #1035.
* Agent Console: rewrite script and header inclusion so that javascript.js from
  module is included exactly once. Fixes Elastix bug #1036.
* Dialer (ECCP): allow the "agentlogout" request to cancel a login that is still
  in progress and asking for the agent numeric password.

1.6 (SVN revision 3087)